# shell-utils

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
check-zip/: Cargo.toml
check-zip/src/: cli.rs  main.rs
cz/: Cargo.toml
cz/src/: cli.rs  main.rs
git-sync/: Cargo.toml
git-sync/src/: cli.rs  main.rs
