[package]
name = "check-zip"
version = "0.1.0"
edition = "2024"
authors = ["HUANG Cheng <cheng@duck.com>"]
description = "A tool to check the integrity of ZIP files."
license = "MIT"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
colour = "2.1.0"
zip = "2.4.2"

[dev-dependencies]
tempfile = "3.24.0"

