[package]
name = "check-zip"
description = "A tool to check the integrity of ZIP files."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true


[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
colour = "2.1.0"
zip = "2.4.2"

[dev-dependencies]
tempfile = "3.24.0"

