[package]
name = "git-sync"
description = "A tool to synchronize local directories with remote Git repositories."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
colour = "2.1.0"
shellexpand = "3.1.1"
which = "8.0.0"
